[package]
name = "eva-robots"
version = "0.1.6"
edition = "2021"
authors = ["Sergei S. <div@altertech.com>"]
license = "Apache-2.0"
description = "Commons for EVA ICS v4"
repository = "https://github.com/eva-ics/eva-robots"
readme = "README.md"
keywords = ["eva-ics", "iot", "industrial", "robots"]

[dependencies]
eva-common = { version = "0.1.166", features = ["actions"] }
serde = { version = "1.0.127", features = ["derive"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
